--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
-    "ngx-toaster": "^1.0.1",
+    "ngx-toastr": "^10.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
